--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^7.1.96",
     "core-js": "^3.6.5",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
